# network-traffic-control

./: .env  Cargo.toml  Dockerfile  README.md  go.mod  go.sum  main.go
common/: response_dto.go
config/: config.go
core/: Aes256.go
descriptors/: kube-configmap.yml  kube-deploy.yml
encryption/: aes_encryption.go  salt_encrytion.go
src/: corrupter.rs  delayer.rs  injector.rs  io.rs  lib.rs  probability.rs  shutdowner.rs  slicer.rs  terminator.rs  throttler.rs
src/utils/: mod.rs  rate_counting_reader.rs
src/v1/: base_router.go
src/v1/adapter/dto/: cluster_agent_response_message.go  encrypted_kafka_message_dto.go  get_list_filter_input.go  kube_agent_info_dto.go  user_header_request_dto.go
src/v1/adapter/enum/AccountType/: account_type.go
src/v1/adapter/enum/AgentCommand/: agent_command.go
src/v1/adapter/enum/Authority/: authority.go
src/v1/adapter/enum/DockerRegistryType/: docker_registry_type.go
src/v1/adapter/enum/InitialSettingStatus/: initial_setting_status.go
src/v1/adapter/enum/Status/: status.go
src/v1/adapter/enum/UserType/: user_type.go
src/v1/adapter/universal/: base_entity.go  company.go  docker_hub_info.go  git_directory.go  git_info.go  organization.go  team.go  user.go  user_info.go
src/v1/db/: odm.go
src/v1/events/: kafka_message.go  kafka_publisher.go
src/v1/kafka/cluster/: cluster.go
src/v1/kafka/manager/: entrance.go
src/v1/logs/: logs.go  types.go
src/v1/rabbitmq/: cluster.go  types.go
src/v1/utility/: types.go  utility.go
src/v1/validator/: validator.go
test/: simple.rs
